--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div>
-        <h1>Chrysos Heirs</h1>
+        <h1>Amphoreus</h1>
         <p>It is said that as Kephale's divine radiance dimmed, they offered their own Coreflame and left behind the Oracle of Creation.
             Afterward, heroes imbued with great power began to walk the earth. They carried in their veins golden divine blood and were known as the "Chrysos Heirs."</p>
     </div>
